# minimal_uniproton

./: README.md
Chapter2/lab_memManagment/: Makefile  README.md  内存管理实验 v3.docx
Chapter2/lab_memManagment/benchmark/: Makefile  bench-malloc-thread.c  benchmark_malloc_glibc
Chapter2/lab_memManagment/lib/: alloc_hack.c
Chapter2/lab_memManagment/lib/include/: basic_alog.h  memory_lab.h  mempool.h  prt_mem.h  slab.h
Chapter2/lab_memManagment/lib/src/basic_alog/: 4_basic_alg.c
Chapter2/lab_memManagment/lib/src/mempool/: mempool.c
Chapter2/lab_memManagment/lib/src/slab/: slab.c
Chapter2/lab_memManagment/lib/src/uniproton_buddy_allocator/: prt_mem.c  prt_mem_internal.h
Chapter2/lab_memManagment/lib/src/uniproton_buddy_allocator/fsc/: prt_fscmem.c  prt_fscmem_internal.h
Chapter2/lab_memManagment/lib/src/uniproton_buddy_allocator/include/: prt_fscmem_external.h  prt_mem_external.h
Chapter2/lab_memManagment/test/: main.c
Chapter2/lab_memManagment/test/include/: test.h
Chapter2/lab_memManagment/test/simple_test/: test_001.c  test_002.c
Chapter2/lab_memManagment/test/stdlib_test/: 001_test.c  002_test.c
Chapter3/m_uniproton/: config.xml
Chapter3/m_uniproton/cmake/tool_chain/: rv64virt_riscv64.cmake  uniproton_tool_chain_gcc_riscv64.cmake
Chapter3/m_uniproton/demos/riscv64virt/apps/: CMakeLists.txt
Chapter3/m_uniproton/demos/riscv64virt/bsp/driver/: uart.c
Chapter3/m_uniproton/src/arch/cpu/riscv64/common/hwi/: prt_hw_clint.h
Chapter3/m_uniproton/src/core/ipc/queue/: prt_queue.c
Chapter3/m_uniproton/src/core/kernel/task/amp/: prt_task_info.c
Chapter3/m_uniproton/src/utility/lib/: CMakeLists.txt  prt_lib_memset_s.c
m_uniproton/: CMakeLists.txt
m_uniproton/demos/riscv64virt/: CMakeLists.txt
m_uniproton/demos/riscv64virt/bsp/driver/: uart.h
m_uniproton/src/: CMakeLists.txt
m_uniproton/src/arch/cpu/: CMakeLists.txt
m_uniproton/src/arch/cpu/riscv64/common/exc/: prt_exc.c
m_uniproton/src/core/ipc/include/: prt_sem_external.h
m_uniproton/src/core/ipc/queue/: prt_queue_init.c
m_uniproton/src/core/ipc/sem/: prt_sem_init.c
m_uniproton/src/core/kernel/task/amp/: prt_amp_task.c  prt_amp_task_init.c  prt_task_init.c
m_uniproton/src/core/kernel/timer/swtmr/: prt_swtmr_init.c
m_uniproton/src/mem/fsc/: prt_fscmem.c
m_uniproton/src/om/cpup/: prt_cpup_thread_init.c
m_uniproton/src/om/hook/: prt_hook_init.c
m_uniproton/src/utility/lib/: prt_lib_version.c
m_uniproton/src/utility/lib/include/: adapt_libbound.h  prt_lib_external.h
